--- a/index.html
+++ b/index.html
@@ -17,14 +17,17 @@
     <div class="pace-container">
     
       <nav class="navbar fixed-top">
-        <a class="logo" href="index.html"><img src="img/logo.png" alt=""></a>
+        <a class="logo" href="index.html">
+          <img src="img/logo.png" alt="">
+          <img src="img/logo-white.png" alt="" class="logo-white">
+        </a>
         <div class="menubar">
           <div class="navbar">
             <a class="logo" href="index.html"><img src="img/logo-white.png" alt=""></a>
           </div>
           <div class="container">
             <div class="lang-wrap">
-              <a href="#!" class="lang">English</a>
+              <a href="#!" class="lang">عربي</a>
             </div>
             <div class="row">
               <div class="col-sm-6 col-md-5 col-xl-4 col-xxl-3">
@@ -455,13 +458,13 @@
               <img src="img/scroll-7.svg" alt="" class="scroll-icon" data-enllax-ratio="1.5"data-enllax-type="foreground">
             </div>
             <div class="row justify-content-center">
-              <div class="col-lg-9 col-xxl-8 fz-20 font-weight-semibold z-2">
+              <div class="col-lg-9 col-xxl-8 fz-20 font-weight-semibold z-2" id="counter">
                 <div class="row li">
                   <div class="col-3 text-center">
                     <img src="img/ic-1.svg" alt="" class="icon-2">
                   </div>
                   <div class="col">
-                    <p class="fz-50 text-black pb-sm-1">150</p>
+                    <p class="fz-50 text-black pb-sm-1"><span class="counter-value" data-count="150">0</span></p>
                     <div>AAI Nashia Scheme is a challenging program where 150 participants.</div>
                   </div>
                 </div>
@@ -470,7 +473,7 @@
                     <img src="img/ic-2.svg" alt="" class="icon-2">
                   </div>
                   <div class="col">
-                    <p class="fz-50 text-black pb-sm-1">1000</p>
+                    <p class="fz-50 text-black pb-sm-1"><span class="counter-value" data-count="1000">0</span></p>
                     <div>Al Shabab Scheme offers 1000 participants, in its first cohort.</div>
                   </div>
                 </div>
@@ -479,7 +482,7 @@
                     <img src="img/ic-3.svg" alt="" class="icon-2">
                   </div>
                   <div class="col">
-                    <p class="fz-50 text-black pb-sm-1">200+</p>
+                    <p class="fz-50 text-black pb-sm-1"><span class="counter-value" data-count="200">0</span>+</p>
                     <div>Fusce nec elementum ante, cursus rhoncus augue etiam non dignissim velit. Nulla eu risus porta.</div>
                   </div>
                 </div>
@@ -488,7 +491,7 @@
                     <img src="img/ic-4.svg" alt="" class="icon-2">
                   </div>
                   <div class="col">
-                    <p class="fz-50 text-black pb-sm-1">70+</p>
+                    <p class="fz-50 text-black pb-sm-1"><span class="counter-value" data-count="70">0</span>+</p>
                     <div>Donec sit amet lorem non turpis dapibus viverra id onec malesuada accumsan semper.</div>
                   </div>
                 </div>
