--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
               </div>
               <div class="col-lg-8 col-xl-6">
                 <div class="block">
-                  <img src="img/scroll-1.svg" alt="" class="scroll-icon" data-enllax-ratio="1.5"data-enllax-type="foreground">
-                  <p class="quotes mb-0 mb-md-3">“</p>
+                  <img src="img/scroll-1.svg" alt="" class="scroll-icon" data-enllax-ratio=".4" data-enllax-type="foreground">
+                  <p class="pb-0 pb-md-3"><img src="img/quote.png" alt="" width="32"></p>
                   <p class="fz-24 font-weight-semibold pb-md-3">Your role now, is to prepare yourselves in educational and cultural fields, and set an example for shouldering the responsibilities of the future.</p>
                   <p>- Speech of His Majesty Sultan Qaboos bin Said on the occasion of the 13th National Day to the Youth of Oman</p>
                 </div>
@@ -155,7 +155,7 @@
                     <h4 class="pb-md-4">Al Nashia Scheme</h4>
                     <p class="pb-md-4">This is a 2 week intense residential program delivered in Muscat to 150 participants aged between 15-17 years old.</p>
                     <a href="#!" class="link"><span>Learn more</span></a>
-                    <img src="img/scroll-2.svg" alt="" class="scroll-icon" data-enllax-ratio="1.5"data-enllax-type="foreground">
+                    <img src="img/scroll-2.svg" alt="" class="scroll-icon" data-enllax-ratio="1.5" data-enllax-type="foreground">
                   </div>
                 </div>
               </div>
@@ -173,7 +173,7 @@
                   </div>
                 </div>
                 <div class="scroll-icon-wrap">
-                  <img src="img/scroll-3.svg" alt="" class="scroll-icon" data-enllax-ratio="1.5"data-enllax-type="foreground">
+                  <img src="img/scroll-3.svg" alt="" class="scroll-icon" data-enllax-ratio=".5" data-enllax-type="foreground">
                 </div>
               </div>
             </div>
@@ -181,19 +181,19 @@
         </section>
 
         <section class="section-4">
-          <img src="img/scroll-4.svg" alt="" class="scroll-icon" data-enllax-ratio="1.5"data-enllax-type="foreground">
+          <img src="img/scroll-4.svg" alt="" class="scroll-icon" data-enllax-ratio="1.5" data-enllax-type="foreground">
           <div class="container">
             <h2 class="text-center pb-xl-3 mb-5">Events</h2>
             <div class="row justify-content-center">
               <div class="col-xl-10 z-2">
 
                 <div class="block-wrap">
-                  <div class="block text-white">
+                  <div class="block">
     
                     <div class="owl-1 owl-carousel owl-theme">
 
                       <div class="owl-slide">
-                        <div class="row">
+                        <div class="row text-white">
                           <div class="col col-xxl-8">
                             <p class="fz-14 text-uppercase pb-2">Upcoming Events</p>
                             <h4 class="pb-3">Aliquam quis leo vulputate, pulvinar magna.</h4>
@@ -214,7 +214,7 @@
                       </div>
 
                       <div class="owl-slide">
-                        <div class="row">
+                        <div class="row text-white">
                           <div class="col col-xxl-8">
                             <p class="fz-14 text-uppercase pb-2">Upcoming Events</p>
                             <h4 class="pb-3">Aliquam quis leo vulputate, pulvinar magna.</h4>
@@ -401,13 +401,13 @@
               </div>
             </div>
             <div class="scroll-icon-wrap">
-              <img src="img/scroll-5.svg" alt="" class="scroll-icon" data-enllax-ratio="1.5"data-enllax-type="foreground">
+              <img src="img/scroll-5.svg" alt="" class="scroll-icon" data-enllax-ratio="1.5" data-enllax-type="foreground">
             </div>
           </div>
         </section>
 
         <section class="section-6">
-          <img src="img/scroll-6.svg" alt="" class="scroll-icon" data-enllax-ratio="1.5"data-enllax-type="foreground">
+          <img src="img/scroll-6.svg" alt="" class="scroll-icon" data-enllax-ratio=".7" data-enllax-type="foreground">
           <div class="container">
             <h2 class="text-center pb-xl-3 mb-5">Latest News</h2>
             <div class="row justify-content-center">
@@ -452,10 +452,10 @@
         </section>
 
         <section class="section-7">
-          <img src="img/scroll-8.svg" alt="" class="scroll-icon" data-enllax-ratio="1.5"data-enllax-type="foreground">
+          <img src="img/scroll-8.svg" alt="" class="scroll-icon" data-enllax-ratio="1" data-enllax-type="foreground">
           <div class="container">
             <div class="scroll-icon-wrap">
-              <img src="img/scroll-7.svg" alt="" class="scroll-icon" data-enllax-ratio="1.5"data-enllax-type="foreground">
+              <img src="img/scroll-7.svg" alt="" class="scroll-icon" data-enllax-ratio=".5" data-enllax-type="foreground">
             </div>
             <div class="row justify-content-center">
               <div class="col-lg-9 col-xxl-8 fz-20 font-weight-semibold z-2" id="counter">
