--- a/index.html
+++ b/index.html
@@ -416,7 +416,10 @@
         </section>
 
         <section class="section-6">
-          <img src="img/scroll-6.svg" alt="" class="scroll-icon" data-enllax-ratio=".7" data-enllax-type="foreground">
+          <div class="scroll-icon" data-enllax-ratio=".7" data-enllax-type="foreground">
+            <img src="img/scroll-6-1.svg" alt="">
+            <img src="img/scroll-6-2.svg" alt="" class="double-svg">
+          </div>
           <div class="container">
             <h2 class="text-center pb-xl-3 mb-5">Latest News</h2>
             <div class="row justify-content-center">
@@ -467,7 +470,10 @@
         </section>
 
         <section class="section-7">
-          <img src="img/scroll-8.svg" alt="" class="scroll-icon" data-enllax-ratio="1" data-enllax-type="foreground">
+          <div class="scroll-icon" data-enllax-ratio="1" data-enllax-type="foreground">
+            <img src="img/scroll-8-1.svg" alt="">
+            <img src="img/scroll-8-2.svg" alt="" class="double-svg">
+          </div>
           <div class="container">
             <div class="scroll-icon-wrap">
               <img src="img/scroll-7.svg" alt="" class="scroll-icon" data-enllax-ratio=".5" data-enllax-type="foreground">
