--- a/index.html
+++ b/index.html
@@ -118,10 +118,7 @@
               <div class="col-lg-8 col-xl-6">
                 <div class="block">
                   <img src="img/scroll-1.svg" alt="" class="scroll-icon" data-enllax-ratio=".4" data-enllax-type="foreground">
-                  <div class="svg-wrap">
-                    <img src="img/svg-bg.svg" alt="" class="svg" data-enllax-ratio=".05" data-enllax-type="foreground">
-                  </div>
-                  <p class="quote pb-0 pb-md-3"><img src="img/quote.png" alt="" width="32"></p>
+                  <p class="quote pb-0 pb-md-3"><img src="img/quote.svg" alt="" width="32"></p>
                   <p class="fz-24 font-weight-semibold pb-md-3">Your role now, is to prepare yourselves in educational and cultural fields, and set an example for shouldering the responsibilities of the future.</p>
                   <p>- Speech of His Majesty Sultan Qaboos bin Said on the occasion of the 13th National Day to the Youth of Oman</p>
                 </div>
@@ -149,6 +146,7 @@
         </section>
 
         <section class="section-3">
+          <img src="img/scroll-3.svg" alt="" class="scroll-icon" data-enllax-ratio=".5" data-enllax-type="foreground">
           <div class="container-fluid">
             <div class="row mb-3 pb-3 mb-lg-0 pb-lg-0">
               <div class="col-md-6 col-lg-7 mb-3 mb-md-0">
@@ -162,7 +160,8 @@
                     <h4 class="pb-md-4">Al Nashia Scheme</h4>
                     <p class="pb-md-4">This is a 2 week intense residential program delivered in Muscat to 150 participants aged between 15-17 years old.</p>
                     <a href="#!" class="link"><span>Learn more</span></a>
-                    <img src="img/scroll-2.svg" alt="" class="scroll-icon" data-enllax-ratio="1.5" data-enllax-type="foreground">
+                    <img src="img/scroll-2-1.svg" alt="" class="scroll-icon" data-enllax-ratio="1.9" data-enllax-type="foreground">
+                    <img src="img/scroll-2-2.svg" alt="" class="scroll-icon double-svg-2" data-enllax-ratio="1.5" data-enllax-type="foreground">
                   </div>
                 </div>
               </div>
@@ -180,9 +179,6 @@
                     <p class="pb-md-4">This is a 2-stage program, Virtual Learning (1000 participants) and Experiential Learning (100 participants) targeting 18-29 years old.</p>
                     <a href="#!" class="link"><span>Learn more</span></a>
                   </div>
-                </div>
-                <div class="scroll-icon-wrap">
-                  <img src="img/scroll-3.svg" alt="" class="scroll-icon" data-enllax-ratio=".5" data-enllax-type="foreground">
                 </div>
               </div>
             </div>
@@ -416,10 +412,8 @@
         </section>
 
         <section class="section-6">
-          <div class="scroll-icon" data-enllax-ratio=".7" data-enllax-type="foreground">
-            <img src="img/scroll-6-1.svg" alt="">
-            <img src="img/scroll-6-2.svg" alt="" class="double-svg">
-          </div>
+          <img src="img/scroll-6-1.svg" alt="" class="scroll-icon" data-enllax-ratio=".85" data-enllax-type="foreground">
+          <img src="img/scroll-6-2.svg" alt="" class="scroll-icon double-svg" data-enllax-ratio=".7" data-enllax-type="foreground">
           <div class="container">
             <h2 class="text-center pb-xl-3 mb-5">Latest News</h2>
             <div class="row justify-content-center">
@@ -470,13 +464,12 @@
         </section>
 
         <section class="section-7">
-          <div class="scroll-icon" data-enllax-ratio="1" data-enllax-type="foreground">
-            <img src="img/scroll-8-1.svg" alt="">
-            <img src="img/scroll-8-2.svg" alt="" class="double-svg">
-          </div>
+          <img src="img/scroll-8-1.svg" alt="" class="scroll-icon" data-enllax-ratio="1" data-enllax-type="foreground">
+          <img src="img/scroll-8-2.svg" alt="" class="scroll-icon double-svg" data-enllax-ratio="1.15" data-enllax-type="foreground">
           <div class="container">
             <div class="scroll-icon-wrap">
-              <img src="img/scroll-7.svg" alt="" class="scroll-icon" data-enllax-ratio=".5" data-enllax-type="foreground">
+              <img src="img/scroll-7-1.svg" alt="" class="scroll-icon" data-enllax-ratio="1.9" data-enllax-type="foreground">
+              <img src="img/scroll-7-2.svg" alt="" class="scroll-icon double-svg-2" data-enllax-ratio="1.5" data-enllax-type="foreground">
             </div>
             <div class="row justify-content-center">
               <div class="col-lg-9 col-xxl-8 fz-20 font-weight-semibold z-2" id="counter">
